# Google-girl-hackathon2025

./: .gitignore  README.md
DiagnoCrew/: .env  README.md  app.py  config.py  requirements.txt  state.py
DiagnoCrew/.streamlit/: config.toml
DiagnoCrew/components/: sidebar.py
DiagnoCrew/docs/: workflow.wsd
DiagnoCrew/medical_assistants/: README.md  backend_services.py  pyproject.toml
DiagnoCrew/medical_assistants/src/medical_assistants/: crew.py  main.py
DiagnoCrew/medical_assistants/src/medical_assistants/config/: agents.yaml  tasks.yaml
DiagnoCrew/medical_assistants/tests/: tests.py
DiagnoCrew/pages/: Diagnostic_Results.py  Home.py  Symptoms_Lab_Results.py  Upload_Images.py
DiagnoCrew/utils/: diagnostics.py
modular_app/: constants.py  state.py
modular_app/components/: navigation_buttons.py  patient_info_display.py  sidebar.py
modular_app/docs/: diagram.wsd
modular_app/pages/: Patient_Information.py  Upload_Images.py
modular_app/utils/: diagnostics.py  reporting.py
