[project]
name = "medical_assistants"
version = "0.1.0"
description = "medical_assistants using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "docling>=2.24.0",
]

[project.scripts]
medical_assistants = "medical_assistants.main:run"
run_crew = "medical_assistants.main:run"
train = "medical_assistants.main:train"
replay = "medical_assistants.main:replay"
test = "medical_assistants.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
